# csvsmith

./: MANIFESTO.md  README.md  pyproject.toml
src/csvsmith/: __init__.py  classify.py  cli.py  duplicates.py
tests/: test_classify.py  test_duplicates.py
