[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csvsmith"
version = "0.2.0"
description = "Small CSV utilities: classification, duplicates, row digests, and CLI helpers."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Eiichi YAMAMOTO", email = "info@yeiichi.com" }
]
keywords = ["csv", "pandas", "duplicates", "data-cleaning", "file-organization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

dependencies = [
  "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/yeiichi/csvsmith"
Repository = "https://github.com/yeiichi/csvsmith"

[project.scripts]
csvsmith = "csvsmith.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
